Fixed an issue that caused the buttons in the display to use the wrong font.

--- a/src/journey.js.scss
+++ b/src/journey.js.scss
@@ -132,6 +132,10 @@ div.journey-js-dialog {
         }
     }
 
+    button {
+        font-family: var(--journey-js-default-font);
+    }
+
     div {
         &:first-of-type {
             padding-right: calc( var(--journey-js-dialog-close-button-size) + var(--journey-js-spacing) );
